manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-backend
  namespace: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-backend
  template:
    metadata:
      labels:
        app: todo-project-backend
    spec:
      containers:
        - name: backend
          image: pasiol/todo-project-backend@sha256:57c7ae544af1482f1e8c5e7bfc52a11db206b247bc080f68efcfa82c81310127
