manifests/deploymentBroadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-broadcaster
  namespace: todo-project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: todo-project-broadcaster
  template:
    metadata:
      labels:
        app: todo-project-broadcaster
    spec:
      containers:
        - name: todo-project-broadcaster
          image: pasiol/subcriber-bot@sha256:b94faf7fdc269c193c0fa3c32c07798ee4e7813018408b0efe32d5d951f00d11
          resources:
            limits:
              cpu: "10m"
              memory: "20Mi"
