manifests/toolbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
  labels:
    app: toolbox
spec:
  containers:
    - image: pasiol/debian-slim-toolbox@sha256:9764ab8bb902f2dd0714a0fbe26d3886d40ad83ef005740bf9c81ffa5a13154b
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: toolbox
