manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
    todo-project-backend-svc
  namespace: todo-project
spec:
  type: LoadBalancer
  selector:
    app: todo-project-backend
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
